--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,18 @@
-header {    
+#wrapPageContent {
+    margin: 0 auto;
+}
+header { 
+    
+    max-width: 1600px;   
+    margin: 0 auto;    
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     color: #381CE8;    
 }
-
+main {
+    max-width: 1400px;
+    margin: 0 auto;
+}
 #titleLarge {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
