Fixed 3rd item > incorrect css before position-relative so it was not activating

--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,10 @@ main {
 }
 
 /* Scroll Spy*/
-
-.cardContainer {
-
-}
-
 #wrapScrollSpy {
     position: relative;
 }
+/* .cardContainer {
+
+} */
+
