--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ main {
 #wrapScrollSpy {
     position: relative;
 }
-/* .cardContainer {
-
-} */
+.cardContainer {
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    border-radius: 20px;
+}
 
